--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,4 +1,4 @@
-:root {
+/* :root {
   --max-width: 1100px;
   --border-radius: 12px;
   --font-mono: ui-monospace, Menlo, Monaco, 'Cascadia Mono', 'Segoe UI Mono',
@@ -104,4 +104,24 @@ a {
   html {
     color-scheme: dark;
   }
+} */
+
+@media (min-width: 576px) {
+  .mobile_invisible{
+    display: none;
+  }
+ }
+
+
+.image-cropper img{
+  display: block;
+  margin: 0 auto;
+  height: auto;
+  width: 150%; 
+  margin: 0 0 0 -20%;
+  -webkit-border-radius: 50%;
+  -moz-border-radius: 50%;
+  -ms-border-radius: 50%;
+  -o-border-radius: 50%;
+  border-radius: 50%;  
 }
